Tests/DependencyInjection/Fixtures/annotations/inject/invalid/FooClassInvalidConstructorInjection3.php
<?php
/** @Service */
class FooClassInvalidConstructorInjection3
{
    /** @Inject({"foo"}) */
    public function __construct($fooService, $barService)
    {
    }
}
